force-app/main/default/objects/blng__GLTreatment__c/blng__GLTreatment__c.object-meta.xml
<CustomObject>
    <label>GL Treatment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>