force-app/main/default/objects/blng__GLTreatment__c/fields/blng__CreditGLAccount__c.field-meta.xml
<CustomField>
    <fullName>blng__CreditGLAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__GLAccount__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__GLAccount__c</referenceTo>
    <relationshipLabel>GL Treatments</relationshipLabel>
    <relationshipName>CreditGLTreatments</relationshipName>
    <type>Lookup</type>
</CustomField>