force-app/main/default/objects/blng__GLTreatment__c/fields/blng__GLRule__c.field-meta.xml
<CustomField>
    <fullName>blng__GLRule__c</fullName>
    <label>GL Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__GLRule__c.blng__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__GLRule__c</referenceTo>
    <relationshipLabel>GL Treatments</relationshipLabel>
    <relationshipName>GLTreatments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>